--- a/resources/assets/sass/sitewide-partials/pageMain.scss
+++ b/resources/assets/sass/sitewide-partials/pageMain.scss
@@ -5,279 +5,17 @@
         border: 0;
         border-radius: 20px;
         padding: 2rem;
-
         width: 100%;
     }
 
-    form {
+    @import "../page-partials/form";
+    @import "../page-partials/tables";
+    @import "../page-partials/clientSidebar";
+    @import "../page-partials/whiteBox";
+    @import "../page-partials/whiteAmountBox";
+    @import "../page-partials/transactionAmountItem";
+    @import "../page-partials/whiteLinkBox";
 
-        .row {
-            margin-bottom: 30px;
-        }
-        label {
-            color: $darkBlue;
-            display: block;
-            font-family: $ralMedium;
-            font-size: 1rem;
-            margin-bottom: 10px;
-            width: 100%;
-        }
-        .input-group {
-            display: flex;
-            flex-direction: row;
-            input[type='text'],
-            input[type='tel'],
-            input[type='email'],
-            input[type='number'],
-            input[type='password'],
-            input[type='date'],
-            input[type='datetime'],
-            input[type='datetime-local'],
-            select {
-                background-color: $w !important;
-                border: 1px solid $darkBlue;
-                border-radius: 0;
-                box-shadow: none;
-                display: inline-block;
-                height: 40px;
-                outline: none;
-                padding-left: .5rem;
-                padding-right: .5rem;
-                width: 80%;
-            }
-        }
-        input[type='text'],
-        input[type='tel'],
-        input[type='email'],
-        input[type='number'],
-        input[type='password'],
-        input[type='date'],
-        input[type='datetime'],
-        input[type='datetime-local'],
-        select {
-            background-color: $w !important;
-            border: 1px solid $darkBlue;
-            border-radius: 0;
-            box-shadow: none;
-            display: block;
-            height: 40px;
-            outline: none;
-            padding-left: .5rem;
-            padding-right: .5rem;
-            width: 100%;
-        }
-    }
-
-    table {
-        display: table;
-        overflow-x: auto;
-        thead {
-            th {
-                color: $darkBlue;
-                font-family: $ralBold;
-                font-size: 1rem;
-                min-width:200px;
-            }
-        }
-        tbody {
-            tr {
-                td {
-                    color: $darkBlue;
-                    font-family: $ralReg;
-                    font-size: 1rem;
-                    .dropdown {
-                        button.dropdown-toggle {
-                            background-color: transparent;
-                            border: 0;
-                            border-radius: 0;
-                            color: $darkBlue;
-                            display: block;
-                            font-size: 1.1rem;
-                            text-align: right;
-                            @include transition(all .4s ease-in-out);
-                            width: 100%;
-
-                            &:hover,
-                            &.active {
-                                background-color: transparent;
-                                border: 0;
-                                border-radius: 0;
-                                box-shadow: none;
-                                color: $mediumBlue;
-                                outline: none;
-                                text-decoration: none;
-                            }
-
-                            &:after {
-                                display: none;
-                            }
-                        }
-                        .dropdown-menu {
-                            border: 0;
-                            border-radius: 0;
-                            a,
-                            button{
-                                background-color: transparent;
-                                border: 0;
-                                border-radius: 0;
-                                box-shadow: none;
-                                color: $darkBlue;
-                                display: block;
-                                font-family: $ralReg;
-                                font-size: 1rem;
-                                outline: none;
-                                padding: .5rem;
-                                @include transition(all .4s ease-in-out);
-                                text-align: left;
-                                text-decoration: none;
-                                width: 100%;
-
-                                &:hover {
-                                    background-color: transparent;
-                                    border: 0;
-                                    border-radius: 0;
-                                    color: $mediumBlue;
-                                    outline: none;
-                                    text-decoration: none;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-    table.rowLinks {
-        display: block;
-        overflow-x: auto;
-        thead {
-            min-width: 200px;
-        }
-        tbody {
-            tr:hover {
-                cursor:pointer;
-            }
-        }
-    }
-    .tabpanel {
-        .tablist {
-            border-bottom: 1px solid lighten($b, 80%);
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-            overflow-x: auto;
-            overflow-y: hidden;
-            a {
-                border: 1px solid lighten($b, 80%);
-                border-top-left-radius: 10px;
-                border-top-right-radius: 10px;
-                color: $darkBlue;
-                font-family: $ralMedium;
-                font-size: 1rem;
-                margin-bottom: -1px;
-                padding: .5rem 1rem;
-                @include transition(all .4s ease-in-out);
-                text-decoration: none;
-
-                &:hover,
-                &.active {
-                    background-color: $darkBlue;
-                    border: 1px solid $darkBlue;
-                    color: $w;
-                }
-            }
-        }
-        .tab-content {
-            .tab-pane {
-                border: 1px solid lighten($b, 80%);
-                border-top: 0;
-                border-bottom-left-radius: 10px;
-                border-bottom-right-radius: 10px;
-                padding: 1rem;
-            }
-        }
-    }
-
-    .whiteBox {
-        background-color: $w;
-        border: 0;
-        border-radius: 10px;
-        margin: 0 0 30px 0;
-        padding: .75rem;
-
-        h5 {
-            color: $darkBlue;
-            font-family: $ralSemiBold;
-            font-size: 1.75rem;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        table {
-            tbody {
-                tr {
-                    td {
-                        color: $b;
-                        font-family: $ralReg;
-                        font-size: .8rem;
-
-                    }
-                }
-            }
-        }
-
-    }
-    .whiteAmountBox {
-        background-color: $w;
-        border: 0;
-        border-radius: 10px;
-        margin: 0 0 30px 0;
-        padding: 1.5rem;
-
-        h4.amount {
-            color: $mediumBlue;
-            font-family: $ralBold;
-            font-size: 2rem;
-            margin-bottom: 0px;
-        }
-        h3.desc {
-            color: $darkBlue;
-            font-family: $ralReg;
-            font-size: 1.2rem;
-        }
-    }
-    .transactionAmountItem {
-        border: 1px solid lighten($b, 80%);
-        border-radius: 10px;
-        display: block;
-        margin: 0 0 30px auto;
-        padding: 1rem 2rem;
-        width: 85%;
-
-        i {
-            color: $darkBlue;
-            font-size: 3rem;
-        }
-        h5 {
-            color: lighten($b, 75%);
-            font-family: $ralMedium;
-            font-size: 1.15rem;
-            line-height: 1.65rem;
-            margin-bottom: 0;
-        }
-        h3 {
-            color: $darkBlue;
-            font-family: $ralBold;
-            font-size: 2rem;
-            line-height: 2.5rem;
-        }
-    }
-    .dataTables_wrapper {
-        min-height: 500px;
-
-        table {
-            min-height: 500px;
-        }
-    }
 }
 
 
