--- a/resources/assets/sass/page-partials/whiteBox.scss
+++ b/resources/assets/sass/page-partials/whiteBox.scss
@@ -3,14 +3,19 @@
     border: 0;
     border-radius: 10px;
     margin: 0 0 30px 0;
-    overflow-x: auto;
+    overflow: hidden;
     padding: .75rem;
 
     h5 {
         color: $darkBlue;
         font-family: $ralSemiBold;
-        font-size: 1.75rem;
-        margin-bottom: 20px;
+        font-size: 1.5rem;
+        margin-bottom: 30px;
         text-align: center;
+    }
+    table {
+        display: block;
+        overflow-x: auto;
+        width: 100%;
     }
 }
