--- a/resources/assets/sass/sitewide-partials/pageMain.scss
+++ b/resources/assets/sass/sitewide-partials/pageMain.scss
@@ -6,6 +6,14 @@
         border-radius: 20px;
         padding: 2rem;
         width: 100%;
+
+        .sectionTitle {
+            color: $mediumBlue;
+            font-family: $ralMedium;
+            font-size: 1.5rem;
+            margin-bottom: 40px;
+            text-align: center;
+        }
     }
 
     @import "../page-partials/form";
