Created new controllers relating to the project section of the site (billing Freq, main Project controller, billing type, project notes, project type, project status), updated the user model to setup a relationship between a project and user, created required models for the controllers above, created some seeders for the controllers and model above, added link into the header for the projects, created the projects index and create views, updated the web routes for projects.

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -21186,6 +21186,8 @@ header .navbar .navbar-nav li.dropdown .dropdown-menu {
   border-radius: 0;
   box-shadow: 4px 9px 20px -10px rgba(0, 0, 0, 0.5);
   padding: 0.5rem 1rem;
+  min-width: 200px;
+  width: auto;
 }
 header .navbar .navbar-nav li.dropdown .dropdown-menu li {
   display: block;
