--- a/resources/assets/sass/sitewide-partials/pageMain.scss
+++ b/resources/assets/sass/sitewide-partials/pageMain.scss
@@ -23,7 +23,7 @@
     @import "../page-partials/whiteAmountBox";
     @import "../page-partials/transactionAmountItem";
     @import "../page-partials/whiteLinkBox";
-
+    @import "../page-partials/tabList";
 }
 
 
