--- a/resources/assets/sass/page-partials/clientSidebar.scss
+++ b/resources/assets/sass/page-partials/clientSidebar.scss
@@ -1,10 +1,12 @@
 .clientSidebar {
     .tablist {
+        border-bottom: 0;
         display: flex;
         flex-direction: column;
 
         a {
             border: 0;
+            border-radius: 0;
             color: $darkBlue;
             display: block;
             font-family: $ralMedium;
