--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1,1 +1,100 @@
+@font-face {
+  font-family: "ralBlack";
+  src: url(/fonts/Raleway-Black.ttf?03c5f5f5841a7e1c308d0a05ab31d4c8);
+}
+@font-face {
+  font-family: "ralExtraBold";
+  src: url(/fonts/Raleway-ExtraBold.ttf?6a689e13040bdcefd8923a948a4d4c4c);
+}
+@font-face {
+  font-family: "ralBold";
+  src: url(/fonts/Raleway-Bold.ttf?b430856ea5fc5c5168519d03cafd49c1);
+}
+@font-face {
+  font-family: "ralSemiBold";
+  src: url(/fonts/Raleway-SemiBold.ttf?b8a54fb018bb5a0d762cf3d8726d9be8);
+}
+@font-face {
+  font-family: "ralMedium";
+  src: url(/fonts/Raleway-Medium.ttf?10498e1dc3ccaf664c71800178cc9414);
+}
+@font-face {
+  font-family: "ralReg";
+  src: url(/fonts/Raleway-Regular.ttf?cedc82ec9fbfca66222a3124c7a5dd0f);
+}
+@font-face {
+  font-family: "ralLight";
+  src: url(/fonts/Raleway-Light.ttf?f86090a73e4996cf067ed8a18d575d42);
+}
+body {
+  background-color: #f3f3f3;
+}
 
+a.darkBlueBtn,
+button.darkBlueBtn,
+input.darkBlueBtn {
+  background-color: #003b73;
+  border: 0;
+  border-radius: 10px;
+  color: #ffffff;
+  font-family: "ralSemiBold", sans-serif;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  transition: all 0.4s ease-in-out;
+  text-decoration: none;
+}
+a.darkBlueBtn:hover,
+button.darkBlueBtn:hover,
+input.darkBlueBtn:hover {
+  background-color: #0055a6;
+  border: 0;
+  box-shadow: none;
+  color: #ffffff;
+  outline: none;
+  text-decoration: none;
+}
+
+a.darkBlueBtnXl,
+button.darkBlueBtnXl,
+input.darkBlueBtnXl {
+  background-color: #003b73;
+  border: 0;
+  border-radius: 10px;
+  color: #ffffff;
+  font-family: "ralSemiBold", sans-serif;
+  font-size: 1.25rem;
+  padding: 1rem 2rem;
+  transition: all 0.4s ease-in-out;
+  text-decoration: none;
+}
+a.darkBlueBtnXl:hover,
+button.darkBlueBtnXl:hover,
+input.darkBlueBtnXl:hover {
+  background-color: #0055a6;
+  border: 0;
+  box-shadow: none;
+  color: #ffffff;
+  outline: none;
+  text-decoration: none;
+}
+
+.projectShowMain table tbody tr td a {
+  color: #000000;
+  text-decoration: none;
+  transition: all 0.4s ease-in-out;
+}
+.projectShowMain table tbody tr td a:hover {
+  box-shadow: none;
+  color: #0074b7;
+  outline: none;
+  text-decoration: none;
+}
+.projectShowMain h3 {
+  color: #003b73;
+  font-family: "ralSemiBold", sans-serif;
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+}
+.projectShowMain .progress {
+  margin-bottom: 40px;
+}
